--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,15 @@
               "ignoreFailures": true
           }
       ]
-    }
+    },
+    {
+      "name": "valgrind",
+      "program": "",
+      "cwd": "${workspaceFolder}",
+      "type": "cppdbg",
+      "request": "launch",
+      "preLaunchTask": "valgrind C"
+   }
 
   ]
 }
