--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,13 +44,19 @@
       "detail": "Задача создана отладчиком."
     },
     {
-      "type": "valgrind",
-      "target": "${command:cmake.launchTargetPath}",
-      "problemMatcher": [
-        "$valgrind"
-      ],
-      "label": "valgrind: valgrind"
-    }
+      "label": "valgrind C",
+      "type": "shell",
+      "command": "valgrind '${fileDirname}/${fileBasenameNoExtension}'",
+      "presentation": {
+      "reveal": "always",
+      "panel": "shared",
+      "clear": true
+      },
+      "group": {
+      "kind": "build",
+      "isDefault": true
+      }
+      }
   ],
   "version": "2.0.0"
 }
