--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,32 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "(gdb) Launch2",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "enter program name, for example ${workspaceFolder}/a.out",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+          {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          },
+          {
+              "description": "Set Disassembly Flavor to Intel",
+              "text": "-gdb-set disassembly-flavor intel",
+              "ignoreFailures": true
+          }
+      ]
+    },
+
+
+    {
       "name": "(gdb) Запустить",
       "type": "cppdbg",
       "request": "launch",
@@ -27,15 +53,6 @@
               "ignoreFailures": true
           }
       ]
-    },
-    {
-      "name": "valgrind",
-      "program": "",
-      "cwd": "${workspaceFolder}",
-      "type": "cppdbg",
-      "request": "launch",
-      "preLaunchTask": "valgrind C"
-   }
-
+    }
   ]
 }
